--- a/app-office/tpp/ChangeLog
+++ b/app-office/tpp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/tpp
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/tpp/ChangeLog,v 1.7 2007/04/11 18:38:07 welp Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-office/tpp/ChangeLog,v 1.8 2008/08/03 12:46:00 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   11 Apr 2007; Peter Weller <welp@gentoo.org> tpp-1.3.ebuild:
   Keyworded ~amd64 wrt bug 171577
