--- a/app-pda/libopensync-plugin-syncml/ChangeLog
+++ b/app-pda/libopensync-plugin-syncml/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-pda/libopensync-plugin-syncml
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/libopensync-plugin-syncml/ChangeLog,v 1.10 2008/07/13 07:45:34 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/libopensync-plugin-syncml/ChangeLog,v 1.11 2008/08/03 12:54:06 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   13 Jul 2008; Joseph Jezak <josejx@gentoo.org>
   libopensync-plugin-syncml-0.36.ebuild:
