--- a/app-pda/libsyncml/ChangeLog
+++ b/app-pda/libsyncml/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-pda/libsyncml
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/libsyncml/ChangeLog,v 1.11 2008/07/13 07:44:51 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/libsyncml/ChangeLog,v 1.12 2008/08/03 12:55:56 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   13 Jul 2008; Joseph Jezak <josejx@gentoo.org> libsyncml-0.4.6.ebuild:
   Marked ~ppc for bug #197240.
