--- a/app-pda/synce-kde/ChangeLog
+++ b/app-pda/synce-kde/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-pda/synce-kde
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-kde/ChangeLog,v 1.13 2008/06/09 12:50:46 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-kde/ChangeLog,v 1.14 2008/08/03 13:04:39 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   09 Jun 2008; Diego Pettenò <flameeyes@gentoo.org>
   +files/synce-kde-0.9.1+gcc-4.3.patch, synce-kde-0.9.1.ebuild:
