--- a/sys-block/aoetools/ChangeLog
+++ b/sys-block/aoetools/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-block/aoetools
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-block/aoetools/ChangeLog,v 1.26 2008/05/12 16:09:43 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-block/aoetools/ChangeLog,v 1.27 2008/08/03 13:22:14 caleb Exp $
+
+*aoetools-27 (03 Aug 2008)
+
+  03 Aug 2008; Caleb Tennis <caleb@gentoo.org> +aoetools-27.ebuild:
+  version bump
 
   12 May 2008; Markus Rothe <corsair@gentoo.org> aoetools-24.ebuild:
   Stable on ppc64
