--- a/net-www/swfdec-mozilla/ChangeLog
+++ b/net-www/swfdec-mozilla/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-www/swfdec-mozilla
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/swfdec-mozilla/ChangeLog,v 1.9 2008/07/23 18:16:07 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/swfdec-mozilla/ChangeLog,v 1.10 2008/08/03 14:08:31 dang Exp $
+
+*swfdec-mozilla-0.7.4 (03 Aug 2008)
+
+  03 Aug 2008; Daniel Gryniewicz <dang@gentoo.org>
+  +swfdec-mozilla-0.7.4.ebuild:
+  Def version of swfdec-mozilla
 
   23 Jul 2008; Daniel Gryniewicz <dang@gentoo.org> metadata.xml:
   Gnome is taking maintainership, since pclouds is retiring
