--- a/mail-mta/postfix/ChangeLog
+++ b/mail-mta/postfix/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for mail-mta/postfix
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.164 2008/07/22 17:44:21 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.165 2008/08/03 14:29:58 dertobi123 Exp $
+
+*postfix-2.5.3 (03 Aug 2008)
+
+  03 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  -postfix-2.5.2.ebuild, +postfix-2.5.3.ebuild:
+  Version bump, #233779
 
   22 Jul 2008; Tobias Scherbaum <dertobi123@gentoo.org>
   postfix-2.2.11-r1.ebuild, postfix-2.3.8-r1.ebuild,
