--- a/app-portage/conf-update/ChangeLog
+++ b/app-portage/conf-update/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/conf-update
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/conf-update/ChangeLog,v 1.19 2008/06/15 06:52:09 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/conf-update/ChangeLog,v 1.20 2008/08/03 14:31:54 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   15 Jun 2008; Zac Medico <zmedico@gentoo.org> conf-update-1.0.ebuild:
   Bug #226505 - For compatibility with phase execution order in
