--- a/sci-physics/meep/ChangeLog
+++ b/sci-physics/meep/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-physics/meep
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/meep/ChangeLog,v 1.3 2008/06/28 13:14:21 markusle Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/meep/ChangeLog,v 1.4 2008/08/03 14:32:15 markusle Exp $
+
+  03 Aug 2008; Markus Dittrich <markusle@gentoo.org> meep-0.10.1.ebuild:
+  Removed doc USE flag since generation of meep.pdf requires hdf5 and
+  describes a deprecated C++ API (fixes bug #233269).
 
   28 Jun 2008; Markus Dittrich <markusle@gentoo.org> meep-0.10.1.ebuild:
   Since blas-reference seems to result in a faulty meep, let's depend
