--- a/dev-lisp/sbcl/ChangeLog
+++ b/dev-lisp/sbcl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-lisp/sbcl
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.146 2008/07/30 16:19:06 pchrist Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.147 2008/08/03 14:41:12 pchrist Exp $
+
+  03 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org>
+  sbcl-1.0.19.ebuild:
+  Disable QA execstack warnings as upstream will not fix them soon
 
 *sbcl-1.0.19 (30 Jul 2008)
 
