--- a/dev-lisp/sbcl/ChangeLog
+++ b/dev-lisp/sbcl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-lisp/sbcl
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.147 2008/08/03 14:41:12 pchrist Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.148 2008/08/03 14:44:24 pchrist Exp $
+
+  03 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org>
+  sbcl-1.0.18.ebuild:
+  forgot to update the 1.0.18 ebuild
 
   03 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org>
   sbcl-1.0.19.ebuild:
