--- a/app-portage/gatt/ChangeLog
+++ b/app-portage/gatt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/gatt
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/gatt/ChangeLog,v 1.17 2008/07/26 13:16:44 gentoofan23 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/gatt/ChangeLog,v 1.18 2008/08/03 14:42:03 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   26 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org> metadata.xml:
   Change Maintainer.
