--- a/app-portage/layman/ChangeLog
+++ b/app-portage/layman/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/layman
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.59 2008/06/03 04:00:48 wrobel Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.60 2008/08/03 14:45:37 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
 *layman-1.2.0-r1 (03 Jun 2008)
 
