--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1738 2008/08/03 12:44:09 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1739 2008/08/03 15:10:45 dertobi123 Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If doubt put a record here!
+
+  03 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org> use.local.desc:
+  Add local automap use-flag for net-analyzer/nagvis
 
   03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> use.local.desc:
   Remove unused app-office/openoffice:webdav local USE flag.
