--- a/app-portage/portato/ChangeLog
+++ b/app-portage/portato/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/portato
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portato/ChangeLog,v 1.11 2008/08/01 21:17:21 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portato/ChangeLog,v 1.12 2008/08/03 15:11:18 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   01 Aug 2008; Markus Ullmann <jokey@gentoo.org> portato-0.11.ebuild:
   wgetpaste--
