--- a/app-laptop/pommed/ChangeLog
+++ b/app-laptop/pommed/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-laptop/pommed
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/pommed/ChangeLog,v 1.30 2008/06/28 11:10:48 cedk Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/pommed/ChangeLog,v 1.31 2008/08/03 15:21:53 cedk Exp $
+
+  03 Aug 2008; Cédric Krier <cedk@gentoo.org> pommed-1.20.ebuild:
+  Fix depend on dbus-1.1 for bug #233074
 
 *pommed-1.20 (28 Jun 2008)
 
