--- a/net-analyzer/sec/ChangeLog
+++ b/net-analyzer/sec/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/sec
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sec/ChangeLog,v 1.11 2008/01/15 15:52:45 jokey Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sec/ChangeLog,v 1.12 2008/08/03 15:27:58 cedk Exp $
+
+*sec-2.4.2 (03 Aug 2008)
+
+  03 Aug 2008; Cédric Krier <cedk@gentoo.org> +sec-2.4.2.ebuild:
+  Version bump
 
 *sec-2.4.1 (15 Jan 2008)
 
