--- a/app-shells/scsh-install-lib/ChangeLog
+++ b/app-shells/scsh-install-lib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/scsh-install-lib
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/scsh-install-lib/ChangeLog,v 1.3 2007/03/19 11:36:24 kloeri Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-shells/scsh-install-lib/ChangeLog,v 1.4 2008/08/03 15:23:04 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
   Remove mkennedy from metadata.xml due to retirement.
