--- a/app-shells/tcsh/ChangeLog
+++ b/app-shells/tcsh/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/tcsh
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/tcsh/ChangeLog,v 1.83 2007/09/09 14:54:49 josejx Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-shells/tcsh/ChangeLog,v 1.84 2008/08/03 15:30:33 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   09 Sep 2007; Joseph Jezak <josejx@gentoo.org> tcsh-6.15-r2.ebuild:
   Marked ppc64 stable for bug #190949.
