--- a/app-vim/vcscommand/ChangeLog
+++ b/app-vim/vcscommand/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-vim/vcscommand
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/vcscommand/ChangeLog,v 1.3 2008/06/20 13:12:16 hawking Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/vcscommand/ChangeLog,v 1.4 2008/08/03 15:36:22 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
 *vcscommand-0.1_beta26 (20 Jun 2008)
 
