--- a/app-shells/scsh-install-lib/ChangeLog
+++ b/app-shells/scsh-install-lib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-shells/scsh-install-lib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/scsh-install-lib/ChangeLog,v 1.4 2008/08/03 15:23:04 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/scsh-install-lib/ChangeLog,v 1.5 2008/08/03 15:59:12 pchrist Exp $
+
+  03 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org>
+  scsh-install-lib-1.3.0.ebuild:
+  Add missing IUSE variable
 
   03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
   Add USE flag description to metadata wrt GLEP 56.
