--- a/net-dns/bind/ChangeLog
+++ b/net-dns/bind/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/bind
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.210 2008/08/03 15:59:48 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.211 2008/08/03 16:02:46 dertobi123 Exp $
+
+  03 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  -bind-9.4.2_p1.ebuild, bind-9.4.2_p2.ebuild:
+  ppc stable, bug #233675
 
 *bind-9.5.0_p2-r1 (03 Aug 2008)
 *bind-9.4.2_p2-r1 (03 Aug 2008)
