--- a/app-shells/scsh/ChangeLog
+++ b/app-shells/scsh/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-shells/scsh
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/scsh/ChangeLog,v 1.27 2008/08/03 15:25:32 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/scsh/ChangeLog,v 1.28 2008/08/03 16:10:31 pchrist Exp $
+
+  03 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org>
+  scsh-0.6.6.ebuild, scsh-0.6.7.ebuild:
+  Add missing IUSE variable in ebuilds and fix typos
 
   03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
   Add USE flag description to metadata wrt GLEP 56.
