--- a/net-im/gossip/ChangeLog
+++ b/net-im/gossip/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-im/gossip
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/ChangeLog,v 1.77 2008/07/18 15:31:40 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/ChangeLog,v 1.78 2008/08/03 16:16:40 eva Exp $
+
+*gossip-0.30 (03 Aug 2008)
+
+  03 Aug 2008; Gilles Dartiguelongue <eva@gentoo.org> +gossip-0.30.ebuild:
+  bump to 0.30. Artificially raising loudmouth dependency for reasons
+  explained in loudmouth bump.
 
   18 Jul 2008; Olivier Crête <tester@gentoo.org> gossip-0.29.ebuild:
   Remove useless autotools inherit
