--- a/net-im/ejabberd/ChangeLog
+++ b/net-im/ejabberd/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-im/ejabberd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/ejabberd/ChangeLog,v 1.44 2008/07/27 22:51:49 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ejabberd/ChangeLog,v 1.45 2008/08/03 16:19:05 caleb Exp $
+
+*ejabberd-2.0.2_beta1 (03 Aug 2008)
+
+  03 Aug 2008; Caleb Tennis <caleb@gentoo.org> +files/ejabberd-2.0.2.confd,
+  +files/ejabberd-2.0.2.initd, +files/ejabberd-wrapper-2.0.2.template,
+  +files/ejabberdctl-wrapper-2.0.2.template, +ejabberd-2.0.2_beta1.ebuild:
+  version bump
 
   27 Jul 2008; Caleb Tennis <caleb@gentoo.org> ejabberd-2.0.1_p2-r1.ebuild:
   amd64 the revbump too
