--- a/net-im/ejabberd/ChangeLog
+++ b/net-im/ejabberd/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-im/ejabberd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/ejabberd/ChangeLog,v 1.45 2008/08/03 16:19:05 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ejabberd/ChangeLog,v 1.46 2008/08/03 16:21:08 caleb Exp $
+
+  03 Aug 2008; Caleb Tennis <caleb@gentoo.org>
+  -files/ejabberd-1.1.1-r1.initd, -files/ejabberd-1.1.1.confd,
+  -files/ejabberd-2.0.0.confd, -files/ejabberd-2.0.0.initd,
+  -files/ejabberd-wrapper-2.0.0.template,
+  -files/ejabberdctl-wrapper-2.0.0.template, -ejabberd-1.1.4.ebuild,
+  -ejabberd-2.0.0-r1.ebuild, -ejabberd-2.0.1_p2.ebuild:
+  remove older versions
 
 *ejabberd-2.0.2_beta1 (03 Aug 2008)
 
