--- a/net-analyzer/wireshark/ChangeLog
+++ b/net-analyzer/wireshark/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.113 2008/07/20 14:31:32 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.114 2008/08/03 16:22:03 cedk Exp $
+
+  03 Aug 2008; Cédric Krier <cedk@gentoo.org> wireshark-1.0.2.ebuild:
+  Add gtk m4 for bug #233158
 
   20 Jul 2008; Peter Volkov <pva@gentoo.org> -wireshark-1.0.0.ebuild,
   -wireshark-1.0.1.ebuild:
