removing mail-client/claws-mail-pdf-viewer for license issues, 30 days are over

--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1739 2008/08/03 15:10:45 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1740 2008/08/03 16:24:26 opfer Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If doubt put a record here!
+
+  03 Aug 2008; Christian Faulhammer <opfer@gentoo.org> package.mask:
+  removing mail-client/claws-mail-pdf-viewer for license issues, 30 days are over
 
   03 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org> use.local.desc:
   Add local automap use-flag for net-analyzer/nagvis
