--- a/net-misc/tor/ChangeLog
+++ b/net-misc/tor/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/tor
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/tor/ChangeLog,v 1.122 2008/05/29 10:22:36 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/tor/ChangeLog,v 1.123 2008/08/03 16:28:10 opfer Exp $
+
+*tor-0.2.0.30 (03 Aug 2008)
+
+  03 Aug 2008; Christian Faulhammer <opfer@gentoo.org>
+  +files/tor-0.2.0.30-logrotate.patch, +tor-0.2.0.30.ebuild:
+  version bump for bug 233612 by puchu <rauchwolke AT gmx DOT net>
 
   29 May 2008; Christian Faulhammer <opfer@gentoo.org> -tor-0.1.2.19.ebuild:
   clean up
