--- a/app-portage/ufed/ChangeLog
+++ b/app-portage/ufed/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/ufed
 # Copyright 2003-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ChangeLog,v 1.65 2008/08/02 21:42:40 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ChangeLog,v 1.66 2008/08/03 16:32:10 armin76 Exp $
+
+  03 Aug 2008; Raúl Porcel <armin76@gentoo.org> ufed-0.40-r10.ebuild:
+  alpha/ia64/x86 stable wrt #233644
 
   02 Aug 2008; Markus Rothe <corsair@gentoo.org> ufed-0.40-r10.ebuild:
   Stable on ppc64; bug #233644
