--- a/app-text/acroread/ChangeLog
+++ b/app-text/acroread/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/acroread
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.116 2008/08/01 18:06:47 tgurr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.117 2008/08/03 17:10:39 keytoaster Exp $
+
+  03 Aug 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  acroread-8.1.2-r3.ebuild:
+  amd64 stable wrt security bug #233383
 
 *acroread-8.1.2-r3 (01 Aug 2008)
 
