--- a/sci-libs/blas-atlas/ChangeLog
+++ b/sci-libs/blas-atlas/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/blas-atlas
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-atlas/ChangeLog,v 1.82 2008/07/23 14:43:51 markusle Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-atlas/ChangeLog,v 1.83 2008/08/03 17:54:18 markusle Exp $
+
+  03 Aug 2008; Markus Dittrich <markusle@gentoo.org>
+  +files/blas-atlas-3.9.1-Core2Duo-detect.patch,
+  +files/blas-atlas-3.9.1-timing.patch, blas-atlas-3.9.1.ebuild:
+  Added patches to fix infinite recursion during bootstrapping and to
+  improve Core2Duo detection (fixes bug #233614).
 
 *blas-atlas-3.9.1 (22 Jul 2008)
 
