--- a/mail-client/mozilla-thunderbird/ChangeLog
+++ b/mail-client/mozilla-thunderbird/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/mozilla-thunderbird
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.264 2008/07/26 07:33:37 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.265 2008/08/03 17:56:25 dertobi123 Exp $
+
+  03 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  mozilla-thunderbird-2.0.0.16.ebuild:
+  ppc stable, bug #231975
 
   26 Jul 2008; Markus Rothe <corsair@gentoo.org>
   mozilla-thunderbird-2.0.0.16.ebuild:
