--- a/x11-plugins/enigmail/ChangeLog
+++ b/x11-plugins/enigmail/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/enigmail
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/ChangeLog,v 1.131 2008/07/26 07:34:26 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/ChangeLog,v 1.132 2008/08/03 17:57:53 dertobi123 Exp $
+
+  03 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  enigmail-0.95.6-r4.ebuild:
+  ppc stable, bug #231975
 
   26 Jul 2008; Markus Rothe <corsair@gentoo.org> enigmail-0.95.6-r4.ebuild:
   Stable on ppc64; bug #231975
