--- a/app-text/uudeview/ChangeLog
+++ b/app-text/uudeview/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/uudeview
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/uudeview/ChangeLog,v 1.28 2008/08/03 17:33:23 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/uudeview/ChangeLog,v 1.29 2008/08/03 17:58:05 dertobi123 Exp $
+
+  03 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  uudeview-0.5.20-r1.ebuild:
+  ppc stable, bug #222275
 
   03 Aug 2008; Tobias Heinlein <keytoaster@gentoo.org>
   uudeview-0.5.20-r1.ebuild:
