--- a/dev-db/phpmyadmin/ChangeLog
+++ b/dev-db/phpmyadmin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/phpmyadmin
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/phpmyadmin/ChangeLog,v 1.319 2008/08/02 21:26:04 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/phpmyadmin/ChangeLog,v 1.320 2008/08/03 17:59:39 dertobi123 Exp $
+
+  03 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  phpmyadmin-2.11.8.ebuild:
+  ppc stable, bug #232007
 
   02 Aug 2008; Markus Rothe <corsair@gentoo.org> phpmyadmin-2.11.8.ebuild:
   Stable on ppc64; bug #232007
