--- a/dev-ruby/radiant/ChangeLog
+++ b/dev-ruby/radiant/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/radiant
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/radiant/ChangeLog,v 1.9 2008/08/03 07:59:07 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/radiant/ChangeLog,v 1.10 2008/08/03 18:04:49 graaff Exp $
+
+*radiant-0.6.9 (03 Aug 2008)
+
+  03 Aug 2008; Hans de Graaff <graaff@gentoo.org> +radiant-0.6.9.ebuild:
+  Version bump.
 
   03 Aug 2008; Hans de Graaff <graaff@gentoo.org> -radiant-0.6.3.ebuild,
   -radiant-0.6.4.ebuild, -radiant-0.6.6.ebuild:
